--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                                 fill="#24D366" />
                         </svg>
                     </a>
-                    <a href="tel:+79999999999" class="tel-link header__tel-link">
-                        +7 999 999-99-99
+                    <a href="tel:88005002682" class="tel-link header__tel-link">
+                        8-800-500-26-82
                     </a>
                     <a href="./catalog.html" class="btn btn_icon header__btn">
                         <div class="btn__icon">
@@ -108,7 +108,7 @@
                             d="m 70,67 h -40 c 0,0 -7.5,-0.802118 -7.5,-8.365747 0,-7.563629 7.5,-8.634253 7.5,-8.634253 h 20" />
                     </svg>
                 </button>
-                <a href="./catalog.html" class="btn btn_icon header__btn header__mobile-btn">
+                <!-- <a href="./catalog.html" class="btn btn_icon header__btn header__mobile-btn">
                     <div class="btn__icon">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -119,7 +119,7 @@
                     <span class="btn__caption">
                         Каталог
                     </span>
-                </a>
+                </a> -->
             </div>
         </header>
         <main class="main">
@@ -350,71 +350,6 @@
                     </div>
                 </div>
             </section>
-            <section class="dev-section">
-                <div class="wrapper dev-section__wrapper">
-                    <div class="dev-section__content">
-                        <h2 class="subheading subheading_white dev-section__heading">
-                            Инструменты идеальных решений
-                        </h2>
-                        <div class="dev-section__text-content">
-                            <p>
-                                Помимо классических универсальных лакокрасочных материалов, мы предоставляем уникальные
-                                покрытия адаптированные под
-                                любые специфические запросы.
-                                <br>
-                                <br>
-                                После детального изучения условий покраски, специфики окрашиваемых объектов и условий их
-                                эксплуатации команда технологов
-                                разрабатывает химический состав полностью удовлетворяющий все задачи клиента
-                            </p>
-                        </div>
-                    </div>
-                    <ul class="dev-section__list">
-                        <li class="dev-section__list-item anim-on-view">
-                            <h5 class="dev-section__list-item-heading">
-                                Устойчивость
-                            </h5>
-                            <p class="dev-section__list-item-hidden-text">
-                                Стойкость покрытия к маслам, солям и щелочам
-                            </p>
-                            <img src="./assets/img/ustoy.png" alt="" class="dev-section__list-item-img">
-                        </li>
-                        <li class="dev-section__list-item anim-on-view">
-                            <h5 class="dev-section__list-item-heading">
-                                Степень эластичности
-                            </h5>
-                            <p class="dev-section__list-item-hidden-text">
-                                Уровень адаптации покрытия к коллебаниям температуры
-                            </p>
-                            <img src="./assets/img/elastic.png" alt="" class="dev-section__list-item-img">
-                        </li>
-                        <li class="dev-section__list-item anim-on-view">
-                            <h5 class="dev-section__list-item-heading">
-                                Состав пигментов
-                            </h5>
-                            <p class="dev-section__list-item-hidden-text">
-                                Длительность сохранения декоративных качеств покрытия
-                            </p>
-                            <img src="./assets/img/pigments.png" alt="" class="dev-section__list-item-img">
-                        </li>
-                        <li class="dev-section__list-item anim-on-view">
-                            <h5 class="dev-section__list-item-heading">
-                                Уровень адгезии
-                            </h5>
-                            <p class="dev-section__list-item-hidden-text">
-                                Сила сцепления с поверхностью
-                            </p>
-                            <img src="./assets/img/adgezia.png" alt="" class="dev-section__list-item-img">
-                        </li>
-                        <li class="dev-section__list-item dev-section__list-item_no-anim">
-                            <h5 class="dev-section__list-item-heading">
-                                Скорость высыхания
-                            </h5>
-                            <img src="./assets/img/speed.png" alt="" class="dev-section__list-item-img">
-                        </li>
-                    </ul>
-                </div>
-            </section>
             <section class="projects-section">
                 <div class="wrapper projects-section__wrapper">
                     <div class="projects-section__info">
@@ -584,17 +519,17 @@
                         <div class="contacts-section__info-footer">
                             <div class="contacts-section__profile">
                                 <img src="./assets/img/avatar.png" alt="
-Директор отдела продаж | Андреев Андрей Андреевич" class="contacts-section__profile-avatar">
+Директор отдела продаж | Минакова Ирина Алексеевна" class="contacts-section__profile-avatar">
                                 <div class="contacts-section__profile-body">
                                     <p class="contacts-section__profile-heading">
                                         Директор отдела продаж
                                     </p>
                                     <div class="contacts-section__profile-text-content">
                                         <p class="contacts-section__profile-text">
-                                            Андреев Андрей Андреевич
+                                            Минакова Ирина Алексеевна
                                         </p>
-                                        <a href="tel:+79999991212" class="contacts-section__profile-link">
-                                            +7 999 999-12-12
+                                        <a href="tel:+79107018759" class="contacts-section__profile-link">
+                                            +7 910 701-87-59
                                         </a>
                                     </div>
                                 </div>
